# BOOJOOH

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-feature.yml
app/: .env.example  config.py  logger.py  main.py
app/rpabot/: bot.py
